@@ -27,6 +27,7 @@
 
 gint def_group_type = GROUP_BYTE;
 guint max_undo_depth;
+guint offset_base;
 
 void save_configuration() {
 	if(def_font)
@@ -39,6 +40,8 @@ void save_configuration() {
 	gnome_config_set_int("/ghex/MDI/Mode", mdi_mode);
 	
 	gnome_config_set_int("/ghex/Editing/MaxUndoDepth", max_undo_depth);
+
+	gnome_config_set_int("/ghex/Editing/OffsetBase", offset_base);
 
 	gnome_config_sync();
 }
@@ -62,6 +65,8 @@ void load_configuration() {
 	def_group_type = gnome_config_get_int("/ghex/Display/Group=1");
 
 	max_undo_depth = gnome_config_get_int("/ghex/Editing/MaxUndoDepth=100");
-	
+
+	offset_base = gnome_config_get_int("/ghex/Editing/OffsetBase=10");
+
 	mdi_mode = gnome_config_get_int("/ghex/MDI/Mode=2");
 }
